<resources>
    <string name="app_name">AgendaContato</string>
    <string name="lbl_Nome">Nome</string>
    <string name="lbl_Telefone">Telefone</string>
    <string name="lbl_email">E-mail</string>
    <string name="lbl_endereço">Endereço</string>
    <string name="lbl_datas_especiais">Datas especiais</string>
    <string name="lbl_grupos">Grupos</string>
    <string name="lbl_salvar">Salvar</string>
    <string name="lbl_exlcluir">Excluir</string>

</resources>
